src/objects/NPA_Audit__c.object
<CustomObject>
    <description>National Performance Audit</description>
    <fields>
        <fullName>AR_Episide_number__c</fullName>
        <description>Enter the AR / Episode #</description>
        <inlineHelpText>Enter the AR / Episode #</inlineHelpText>
        <label>Oracle AR / Avatar Episode #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias_Description__c</fullName>
        <formula>Alias__r.Alias_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alias Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias_Name__c</fullName>
        <formula>Alias__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alias Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Alias</label>
        <referenceTo>Alias__c</referenceTo>
        <relationshipName>NPA_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AllianceHealth_HumanServices__c</fullName>
        <label>Alliance Health &amp; Human Services</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>B1A__c</fullName>
        <description>Ensure that revenue recorded for consumer per Accounts Receivable Aging current balance agrees with actual payer invoices process for each month under review</description>
        <label>B1A</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <color>#990000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
                <color>#DDDDDD</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>B1B__c</fullName>
        <description>choose one if 1A is No</description>
        <label>B1B</label>
        <picklist>
            <picklistValues>
                <fullName>AR Subledger does not agree with payor invoices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payor sends bill to us for sign-off and adjustments are made</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>B1C__c</fullName>
        <description>Details</description>
        <label>B1C</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>B2A__c</fullName>
        <label>B2A</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>B2B__c</fullName>
        <description>Detail</description>
        <label>B2B</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>B3A__c</fullName>
        <description>Ensure that units of service on source billing data agree to units of service billed on payer invoice</description>
        <label>B3A</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>B3B__c</fullName>
        <description>details</description>
        <label>B3B</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>B4C__c</fullName>
        <description>Type(s) of Service Authorization (e.g., Contract, Billing Authorization, Individual Authorization, Letter of Agreement, etc.)</description>
        <inlineHelpText>Type(s) of Service Authorization (e.g., Contract, Billing Authorization, Individual Authorization, Letter of Agreement, etc.)</inlineHelpText>
        <label>B4C</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>B4D__c</fullName>
        <description>Detail</description>
        <label>B4D</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>B5C__c</fullName>
        <description>Note the billing rate per unit of service on Service Authorization: Billing Rate / Unit of Service ($ / Unit):</description>
        <inlineHelpText>Note the billing rate per unit of service on Service Authorization: Billing Rate / Unit of Service ($ / Unit):</inlineHelpText>
        <label>B5C</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>B5D__c</fullName>
        <description>Detail</description>
        <label>B5D</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BExcA__c</fullName>
        <label>BExcA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BExcB__c</fullName>
        <label>BExcB</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BExcC__c</fullName>
        <label>BExcC</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BExcD__c</fullName>
        <label>BExcD</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BExcE__c</fullName>
        <label>BExcE</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bill_Exceptions__c</fullName>
        <description>number of exceptions</description>
        <formula>0 +
(if (ISPICKVAL(B1A__c,&quot;No&quot;),1,0)) +
(if (ISPICKVAL(B2A__c,&quot;No&quot;),1,0)) +
(if (ISPICKVAL(B3A__c,&quot;No&quot;),1,0)) +
(if (ISPICKVAL(B4A__c,&quot;No&quot;),1,0)) +
(if (ISPICKVAL(B5A__c,&quot;No&quot;),1,0)) +
(if (ISPICKVAL(B6A__c,&quot;No&quot;),1,0)) +
(if (ISPICKVAL(B7A__c,&quot;No&quot;),1,0)) +
(if (ISPICKVAL(B9A__c,&quot;No&quot;),1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Exceptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Type__c</fullName>
        <description>Is service billed thru Oracle or Avatar ?</description>
        <inlineHelpText>Is service billed thru Oracle or Avatar ?</inlineHelpText>
        <label>Bill Type</label>
        <picklist>
            <picklistValues>
                <fullName>Oracle AR #</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avatar Episode #</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a Billing Audit</description>
        <inlineHelpText>If this audit includes a Billing component, check this box, otherwise uncheck it.</inlineHelpText>
        <label>Billing Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_First_Name__c</fullName>
        <description>Client&apos;s First Name</description>
        <inlineHelpText>Client&apos;s First Name</inlineHelpText>
        <label>Client First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Last_Name__c</fullName>
        <description>Client&apos;s Last Name</description>
        <inlineHelpText>Client&apos;s Last Name</inlineHelpText>
        <label>Client Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clients_Current_Age__c</fullName>
        <inlineHelpText>This question is required to finalize the audit, not while status is “In Progress”.</inlineHelpText>
        <label>Client&apos;s Age at Time of Audit</label>
        <picklist>
            <picklistValues>
                <fullName>0 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>H10A__c</fullName>
        <description>A current Annual Review of Contractual Compliance. Choose Not Applicable only if HHP has been contracted for less than (&lt;) 1 year at the time of this review.
Choose one: (Rated)</description>
        <inlineHelpText>A current Annual Review of Contractual Compliance. Choose Not Applicable only if HHP has been contracted for less than (&lt;) 1 year at the time of this review.
Choose one: (Rated)</inlineHelpText>
        <label>H10A</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>H10B__c</fullName>
        <description>If 10a is No, choose one:</description>
        <inlineHelpText>If 10a is No, choose one:</inlineHelpText>
        <label>H10B</label>
        <picklist>
            <picklistValues>
                <fullName>Not documented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not found in file</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>H10C__c</fullName>
        <description>Detail:</description>
        <inlineHelpText>Detail:</inlineHelpText>
        <label>H10C</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>H11A__c</fullName>
        <description>At least one unannounced host home visit that has occurred in the past year (12 months)
Choose one: (Rated)</description>
        <inlineHelpText>At least one unannounced host home visit that has occurred in the past year (12 months)
Choose one: (Rated)</inlineHelpText>
        <label>H11A</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HHP has been contracted for less than 1 year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>H11B__c</fullName>
        <description>If 11a is No, choose one:</description>
        <inlineHelpText>If 11a is No, choose one:</inlineHelpText>
        <label>H11B</label>
        <picklist>
            <picklistValues>
                <fullName>Not documented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not found in file</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>H11C__c</fullName>
        <description>Detail:</description>
        <inlineHelpText>Detail:</inlineHelpText>
        <label>H11C</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>H12A2__c</fullName>
        <description>If No, choose one:</description>
        <inlineHelpText>If No, choose one:</inlineHelpText>
        <label>H12A2</label>
        <picklist>
            <picklistValues>
                <fullName>Not found in file</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>H12B1__c</fullName>
        <description>Abuse Registry / Protective Services
Choose one: (Rated)</description>
        <inlineHelpText>Abuse Registry / Protective Services
Choose one: (Rated)</inlineHelpText>
        <label>H12B1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>H12C1__c</fullName>
        <description>Federal Criminal Check
Choose one: (Rated)</description>
        <inlineHelpText>Federal Criminal Check
Choose one: (Rated)</inlineHelpText>
        <label>H12C1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>H12D1__c</fullName>
        <description>Fingerprinting
Choose one: (Rated)</description>
        <inlineHelpText>Fingerprinting
Choose one: (Rated)</inlineHelpText>
        <label>H12D1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>H12D2__c</fullName>
        <description>If No, choose one:</description>
        <inlineHelpText>If No, choose one:</inlineHelpText>
        <label>H12D2</label>
        <picklist>
            <picklistValues>
                <fullName>Not found in file</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>H12E1__c</fullName>
        <description>Sex Offender Registry										
Choose one: (Rated)</description>
        <inlineHelpText>Sex Offender Registry
Choose one: (Rated)</inlineHelpText>
        <label>H12E1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>H12E2__c</fullName>
        <description>If No, choose one:</description>
        <inlineHelpText>If No, choose one:</inlineHelpText>
        <label>H12E2</label>
        <picklist>
            <picklistValues>
                <fullName>Not found in file</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>H12F1__c</fullName>
        <description>State / Local Criminal Check
Choose one: (Rated)</description>
        <inlineHelpText>State / Local Criminal Check
Choose one: (Rated)</inlineHelpText>
        <label>H12F1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>H12F2__c</fullName>
        <description>If No, choose one:</description>
        <inlineHelpText>If No, choose one:</inlineHelpText>
        <label>H12F2</label>
        <picklist>
            <picklistValues>
                <fullName>Not found in file</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HExcA__c</fullName>
        <description>Do audit results require a corrective action plan?</description>
        <inlineHelpText>Do audit results require a corrective action plan?</inlineHelpText>
        <label>HExcA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HExcB__c</fullName>
        <description>Has the director/manager of the audited service been notified of the exceptions?</description>
        <inlineHelpText>Has the director/manager of the audited service been notified of the exceptions?</inlineHelpText>
        <label>HExcB</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HExcC__c</fullName>
        <description>Has the state&apos;s operations leadership (Executive/State or Operations Director) been notified of exceptions?</description>
        <inlineHelpText>Has the state&apos;s operations leadership (Executive/State or Operations Director) been notified of exceptions?</inlineHelpText>
        <label>HExcC</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HHPExceptions_BgCheck__c</fullName>
        <formula>0+ 
(IF( ISPICKVAL(H12A__c, &apos;No&apos;) ,1,0))+ 
(IF( ISPICKVAL(H12B1__c, &apos;No&apos;) ,1,0))+ 
(IF( ISPICKVAL(H12C1__c, &apos;No&apos;) ,1,0))+ 
(IF( ISPICKVAL(H12D1__c, &apos;No&apos;) ,1,0))+ 
(IF( ISPICKVAL(H12E1__c, &apos;No&apos;) ,1,0))+ 
(IF( ISPICKVAL(H12F1__c, &apos;No&apos;) ,1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HHP Exceptions (BG Check)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HHPExceptions__c</fullName>
        <formula>0+
(IF( ISPICKVAL(H1A__c, &apos;No&apos;) ,1,0))+
(IF( ISPICKVAL(H2A__c, &apos;No&apos;) ,1,0))+
(IF( ISPICKVAL(H3A__c, &apos;No&apos;) ,1,0))+
(IF( ISPICKVAL(H4A__c, &apos;No&apos;) ,1,0))+
(IF( ISPICKVAL(H5A__c, &apos;No&apos;) ,1,0))+
(IF( ISPICKVAL(H6A__c, &apos;No&apos;) ,1,0))+
(IF( ISPICKVAL(H7A__c, &apos;No&apos;) ,1,0))+
(IF( ISPICKVAL(H8A__c, &apos;No&apos;) ,1,0))+
(IF( ISPICKVAL(H9A__c, &apos;No&apos;) ,1,0))+
(IF( ISPICKVAL(H10A__c, &apos;No&apos;) ,1,0))+
(IF( ISPICKVAL(H11A__c, &apos;No&apos;) ,1,0))+
HHPExceptions_BgCheck__c</formula>
        <label>HHP Exceptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HHP_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this an HHP Audit ?</description>
        <inlineHelpText>If this Audit contains an HHP component, check this box, otherwise uncheck it</inlineHelpText>
        <label>HHP Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HHP_First_Name__c</fullName>
        <description>Host Home Provider&apos;s First Name</description>
        <inlineHelpText>Host Home Provider&apos;s First Name (only if Audit includes HHP)</inlineHelpText>
        <label>HHP First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HHP_Last_Name__c</fullName>
        <description>Host Home Provider&apos;s Last Name</description>
        <inlineHelpText>Host Home Provider&apos;s Last Name (only if audit includes HHP)</inlineHelpText>
        <label>HHP Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncompleteBillingRatedQuestions__c</fullName>
        <formula>8 -
(if (ISBLANK(TEXT(B1A__c)),0,1)) -
(if (ISBLANK(TEXT(B2A__c)),0,1)) -
(if (ISBLANK(TEXT(B3A__c)),0,1)) -
(if (ISBLANK(TEXT(B4A__c)),0,1)) -
(if (ISBLANK(TEXT(B5A__c)),0,1)) -
(if (ISBLANK(TEXT(B6A__c)),0,1)) -
(if (ISBLANK(TEXT(B7A__c)),0,1)) -
(if (ISBLANK(TEXT(B9A__c)),0,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incomplete Billing Rated Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncompleteHHPRatedQuestions__c</fullName>
        <formula>17 - 
(if (ISBLANK(TEXT(H1A__c)),0,1)) -
(if (ISBLANK(TEXT(H2A__c)),0,1)) -
(if (ISBLANK(TEXT(H3A__c)),0,1)) -
(if (ISBLANK(TEXT(H4A__c)),0,1)) -
(if (ISBLANK(TEXT(H5A__c)),0,1)) -
(if (ISBLANK(TEXT(H6A__c)),0,1)) -
(if (ISBLANK(TEXT(H7A__c)),0,1)) -
(if (ISBLANK(TEXT(H8A__c)),0,1)) -
(if (ISBLANK(TEXT(H9A__c)),0,1)) -
(if (ISBLANK(TEXT(H10A__c)),0,1)) -
(if (ISBLANK(TEXT(H11A__c)),0,1)) -
(if (ISBLANK(TEXT(H12A__c)),0,1)) -
(if (ISBLANK(TEXT(H12B1__c)),0,1)) -
(if (ISBLANK(TEXT(H12C1__c)),0,1)) -
(if (ISBLANK(TEXT(H12D1__c)),0,1)) -
(if (ISBLANK(TEXT(H12E1__c)),0,1)) -
(if (ISBLANK(TEXT(H12F1__c)),0,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incomplete HHP Rated Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncompleteQualityRatedQuestions__c</fullName>
        <formula>IF($Setup.SystemSettings__c.NPA_V2_Date__c &gt;  Review_Date__c , 18, 19) -
(if (ISBLANK(TEXT(Q1A__c)),0,1))-
(if (ISBLANK(TEXT(Q2A__c)),0,1))-
(if (ISBLANK(TEXT(Q3A__c)),0,1))-
(if (ISBLANK(TEXT(Q4A__c)),0,1))-
(if (ISBLANK(TEXT(Q4F__c)),0,1))-
(if (ISBLANK(TEXT(Q5A__c)),0,1))-
(if (ISBLANK(TEXT(Q5C__c)),0,1))-
(if (ISBLANK(TEXT(Q6A__c)),0,1))-
(if (ISBLANK(TEXT(Q7A__c)),0,1))-
(if (ISBLANK(TEXT(Q8A__c)),0,1))-
(if (ISBLANK(TEXT(Q9A__c)),0,1))-
(if (ISBLANK(TEXT(Q10B__c)),0,1))-
(if (ISBLANK(TEXT(Q11A__c)),0,1))-
(if (ISBLANK(TEXT(Q12B__c)),0,1))-
(if (ISBLANK(TEXT(Q12C1__c)),0,1))-
(if (ISBLANK(TEXT(Q12D1__c)),0,1))-
(if (ISBLANK(TEXT(Q12E1__c)),0,1))-
(IF( ISPICKVAL(Q12F__c, &apos;&apos;) ,0,1)) -
(if (ISBLANK(TEXT(Q12G1__c)),0,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incomplete Quality Rated Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operating_Group__c</fullName>
        <label>Operating Group</label>
        <picklist>
            <picklistValues>
                <fullName>Adult Day Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CareMeridian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NeuroRestorative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redwood</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operating_Region__c</fullName>
        <description>Operating Region based on Business VP</description>
        <inlineHelpText>Based on Business VP</inlineHelpText>
        <label>Operating Region</label>
        <picklist>
            <picklistValues>
                <fullName>ADH MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CareMeridian North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CareMeridian South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NeuroRestorative Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NeuroRestorative Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NeuroRestorative Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NeuroRestorative South Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NeuroRestorative Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Company__c</fullName>
        <label>Partner Company</label>
        <picklist>
            <picklistValues>
                <fullName>ADH Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CareMeridian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative Home Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVS - Cole Vocational Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAS - Family Advocacy Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Step</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Care Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kingsbury Academy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyds Liberty Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MENTOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NeuroRestorative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Foundations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Arrowhead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Central Lakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Heartland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Hennepin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Minnesota Community Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM North Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Ramsey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM River Bluffs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM South Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Southwest Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Woodvale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSI - Transitional Services Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited Quest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Placement_in_HHP__c</fullName>
        <description>Do we have a placement in the Host Home Provider&apos;s home ?</description>
        <inlineHelpText>Do we have a placement in the Host Home Provider&apos;s home ?</inlineHelpText>
        <label>Placement in HHP</label>
        <picklist>
            <controllingField>HHP_Audit__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <description>Client Population</description>
        <label>Population</label>
        <picklist>
            <picklistValues>
                <fullName>Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>